--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div id="loader"><span>Submitting...</span></div>
 
 <script>
-const SCRIPT_URL = "YOUR_WEB_APP_URL_HERE";  // Replace with deployed Google Apps Script Web App URL
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwikG3XgsZKQi-pKNCY8rr8nKv9sa9dWmHhlqpiTxrx49LJwAVfsYlH1eY-S7kt0l1uKA/exec";  // Replace with deployed Google Apps Script Web App URL
 
 function submitFeedback(){
   let answers = [];
@@ -137,3 +137,4 @@ function submitFeedback(){
 </script>
 </body>
 </html>
+
